force-app/main/default/objects/Part_Inventory__c/fields/Minimum_quantity_reminder__c.field-meta.xml
<CustomField>
    <fullName>Minimum_quantity_reminder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Minimum quantity reminder</label>
    <type>Checkbox</type>
</CustomField>