force-app/main/default/objects/Part_Inventory__c/fields/Parent_Part__c.field-meta.xml
<CustomField>
    <fullName>Parent_Part__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Part</label>
    <referenceTo>Part_Inventory__c</referenceTo>
    <relationshipLabel>Parent Part Inventories</relationshipLabel>
    <relationshipName>Part_Inventories</relationshipName>
    <type>Lookup</type>
</CustomField>