force-app/main/default/objects/Part_Inventory__c/fields/Part_Number__c.field-meta.xml
<CustomField>
    <fullName>Part_Number__c</fullName>
    <displayFormat>PI-{00000}</displayFormat>
    <label>Part Number</label>
    <type>AutoNumber</type>
</CustomField>