force-app/main/default/objects/Part_Inventory__c/fields/Quantity_In_Stock__c.field-meta.xml
<CustomField>
    <fullName>Quantity_In_Stock__c</fullName>
    <label>Quantity In Stock</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>